fix: edits background image positioning for whitespace

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,9 @@
   text-align: center;
   background-image: url(./assets/yadeedaColor.png);
   background-position: cover;
+  background-repeat: no-repeat;
+  background-position: left top;
+  min-height: 100vh;
 }
 
 .noBackground {
